// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cartSelector getAvailableCartOrders 1`] = `
Array [
  Object {
    "available": true,
    "deliveryType": "1",
    "price": 0.99,
    "productCode": "1",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 1 code 1",
  },
  Object {
    "available": false,
    "deliveryType": "1",
    "price": 0.99,
    "productCode": "2",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 1 code 2",
  },
  Object {
    "available": true,
    "deliveryType": "2",
    "price": 0.99,
    "productCode": "1",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 2 code 1",
  },
  Object {
    "available": false,
    "deliveryType": "2",
    "price": 0.99,
    "productCode": "2",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 2 code 2",
  },
]
`;

exports[`cartSelector getCartOrders 1`] = `
Array [
  Object {
    "deliveryType": "1",
    "price": 0.99,
    "productCode": "1",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 1 code 1",
  },
  Object {
    "deliveryType": "1",
    "price": 0.99,
    "productCode": "2",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 1 code 2",
  },
  Object {
    "deliveryType": "2",
    "price": 0.99,
    "productCode": "1",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 2 code 1",
  },
  Object {
    "deliveryType": "2",
    "price": 0.99,
    "productCode": "2",
    "quantity": 1,
    "thumbnail_image": "thumbnail_image",
    "title": "type 2 code 2",
  },
]
`;

exports[`cartSelector getCartTotalCost 1`] = `"3.96"`;

exports[`cartSelector getCartTotalQuantity 1`] = `4`;

exports[`cartSelector getDeliveryTypes 1`] = `
Array [
  "1",
  "2",
]
`;
